# relay-forge

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.js  go.work.sum  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts
apps/admin/public/: site.webmanifest
apps/admin/src/: App.tsx  main.tsx
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/public/: site.webmanifest
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
branding/: README.md
deploy/compose/: Caddyfile  Dockerfile.api  Dockerfile.media  Dockerfile.realtime  Dockerfile.web  Dockerfile.worker  docker-compose.dev.yml  docker-compose.yml  nginx-spa.conf
docs/operations/: production-readiness.md  release-checklist.md
infra/: README.md
infra/docker/: Caddyfile  Dockerfile.web  docker-compose.yml  nginx.conf  traefik-dynamic.yml
scripts/: generate-brand-assets.sh  health-check.sh
services/api/: go.mod
services/media/: go.mod
services/realtime/: go.mod
services/worker/: go.mod
(+172 files in other folders)
