[package]
name = "relayforge-desktop"
version = "0.1.0"
edition = "2021"
description = "RelayForge Desktop Application"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "relayforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
